{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 223,
  "lineage": "a4ab5123-c64c-365a-86bb-457da819914e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04eb728367e2618e8",
            "arn": "arn:aws:ec2:us-east-1:551529992584:elastic-ip/eipalloc-04eb728367e2618e8",
            "association_id": "eipassoc-0dda85de0e760f9d4",
            "domain": "vpc",
            "id": "eipalloc-04eb728367e2618e8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c8a4ea601ccb7a66",
            "private_dns": "ip-10-0-3-58.ec2.internal",
            "private_ip": "10.0.3.58",
            "public_dns": "ec2-100-28-188-81.compute-1.amazonaws.com",
            "public_ip": "100.28.188.81",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_main_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551529992584:internet-gateway/igw-0e1614e894375e1c8",
            "id": "igw-0e1614e894375e1c8",
            "owner_id": "551529992584",
            "region": "us-east-1",
            "tags": {
              "Name": "OKKiSz gateway"
            },
            "tags_all": {
              "Name": "OKKiSz gateway"
            },
            "vpc_id": "vpc-00db08df9cdd28bdf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "vpc_main_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04eb728367e2618e8",
            "association_id": "eipassoc-0dda85de0e760f9d4",
            "connectivity_type": "public",
            "id": "nat-012821147578c0d6a",
            "network_interface_id": "eni-0c8a4ea601ccb7a66",
            "private_ip": "10.0.3.58",
            "public_ip": "100.28.188.81",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06d6adc305453b687"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_3",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551529992584:route-table/rtb-0a04af0a1c28a7794",
            "id": "rtb-0a04af0a1c28a7794",
            "owner_id": "551529992584",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-012821147578c0d6a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prywatna tablica routingu"
            },
            "tags_all": {
              "Name": "prywatna tablica routingu"
            },
            "timeouts": null,
            "vpc_id": "vpc-00db08df9cdd28bdf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.vpc_main_nat",
            "aws_subnet.public_3",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551529992584:route-table/rtb-0c5d7f18c00ee0183",
            "id": "rtb-0c5d7f18c00ee0183",
            "owner_id": "551529992584",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e1614e894375e1c8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publiczna tablica routingu"
            },
            "tags_all": {
              "Name": "publiczna tablica routingu"
            },
            "timeouts": null,
            "vpc_id": "vpc-00db08df9cdd28bdf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.vpc_main_gateway",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f869ff5cb609ee10",
            "region": "us-east-1",
            "route_table_id": "rtb-0a04af0a1c28a7794",
            "subnet_id": "subnet-0f5e5fe83ce3f4003"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.vpc_main_nat",
            "aws_route_table.private_route_table",
            "aws_subnet.private_1",
            "aws_subnet.public_3",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027f3a4e5af4281d6",
            "region": "us-east-1",
            "route_table_id": "rtb-0a04af0a1c28a7794",
            "subnet_id": "subnet-022efb962cc2592d4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.vpc_main_nat",
            "aws_route_table.private_route_table",
            "aws_subnet.private_2",
            "aws_subnet.public_3",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024368fa049e27ec7",
            "region": "us-east-1",
            "route_table_id": "rtb-0c5d7f18c00ee0183",
            "subnet_id": "subnet-06d6adc305453b687"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.vpc_main_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_3",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "group_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551529992584:security-group/sg-0815c074ad23f701f",
            "description": "Dostep tylko dla grupy 1",
            "egress": [],
            "id": "sg-0815c074ad23f701f",
            "ingress": [
              {
                "cidr_blocks": [
                  "37.31.140.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "group-1-sg",
            "name_prefix": "",
            "owner_id": "551529992584",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00db08df9cdd28bdf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "group_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551529992584:security-group/sg-097cfbe8e91db84cd",
            "description": "Dostep tylko dla grupy 2",
            "egress": [],
            "id": "sg-097cfbe8e91db84cd",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.2.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "group-2-sg",
            "name_prefix": "",
            "owner_id": "551529992584",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00db08df9cdd28bdf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551529992584:security-group/sg-013d8ca80042fcf39",
            "description": "Dostep dla wszystkich",
            "egress": [],
            "id": "sg-013d8ca80042fcf39",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "public-sg",
            "name_prefix": "",
            "owner_id": "551529992584",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00db08df9cdd28bdf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551529992584:subnet/subnet-0f5e5fe83ce3f4003",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5e5fe83ce3f4003",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "551529992584",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Wydzial Planowania"
            },
            "tags_all": {
              "Name": "Wydzial Planowania"
            },
            "vpc_id": "vpc-00db08df9cdd28bdf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551529992584:subnet/subnet-022efb962cc2592d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022efb962cc2592d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "551529992584",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Wydzial Programowania"
            },
            "tags_all": {
              "Name": "Wydzial Programowania"
            },
            "vpc_id": "vpc-00db08df9cdd28bdf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551529992584:subnet/subnet-06d6adc305453b687",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d6adc305453b687",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "551529992584",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Wykladowcy"
            },
            "tags_all": {
              "Name": "Wykladowcy"
            },
            "vpc_id": "vpc-00db08df9cdd28bdf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551529992584:vpc/vpc-00db08df9cdd28bdf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03dc4b774ad9a9180",
            "default_route_table_id": "rtb-0dfa503d09067cc2f",
            "default_security_group_id": "sg-0a393afa0143558cd",
            "dhcp_options_id": "dopt-0c3a7def3cd2a7729",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00db08df9cdd28bdf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dfa503d09067cc2f",
            "owner_id": "551529992584",
            "region": "us-east-1",
            "tags": {
              "Name": "OKKiSz"
            },
            "tags_all": {
              "Name": "OKKiSz"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}